backend: auth: add authenticate endpoint
